[gd_scene load_steps=5 format=3 uid="uid://basljrecw71a5"]

[ext_resource type="Script" path="res://Scenes/Win/win.gd" id="1_ntx4m"]
[ext_resource type="Texture2D" uid="uid://dxrypusta8p08" path="res://Scenes/Death/static_bg.png" id="2_748mc"]
[ext_resource type="Script" path="res://Scenes/Win/WinnerWinner.gd" id="3_kvk40"]
[ext_resource type="AudioStream" uid="uid://bcs5rxgm7ecxb" path="res://Sounds/BonusJansBossfight.mp3" id="3_xnxtk"]

[node name="Win" type="CanvasLayer"]
script = ExtResource("1_ntx4m")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(287, 325)
texture = ExtResource("2_748mc")

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -391.0
offset_top = -528.0
offset_right = -185.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="header" type="PanelContainer" parent="Sprite2D/VBoxContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Sprite2D/VBoxContainer/header"]
layout_mode = 2
bbcode_enabled = true
text = "[center]
Welcome to LudumDare54 -Limited Space
[color=#ff00ff][font_size=24]MAGNETIC RESCUE[/font_size][/color]

[center]"
fit_content = true

[node name="middle" type="PanelContainer" parent="Sprite2D/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/VBoxContainer/middle"]
layout_mode = 2

[node name="WinnerWinner" type="RichTextLabel" parent="Sprite2D/VBoxContainer/middle/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]

[color=#fbf236][font_size=24]
Congratulations You did it. 
[/font_size]
The laser was destroyed and you escaped.
[/color]

[/center]
"
fit_content = true
script = ExtResource("3_kvk40")

[node name="bottom" type="PanelContainer" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/VBoxContainer/bottom"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="StartGame" type="Button" parent="Sprite2D/VBoxContainer/bottom/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Start Game"

[node name="BackToStart" type="Button" parent="Sprite2D/VBoxContainer/bottom/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Back to Start"

[node name="QuitGame" type="Button" parent="Sprite2D/VBoxContainer/bottom/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xnxtk")
volume_db = 4.216
autoplay = true

[connection signal="pressed" from="Sprite2D/VBoxContainer/bottom/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Sprite2D/VBoxContainer/bottom/VBoxContainer/BackToStart" to="." method="_on_back_to_start_pressed"]
[connection signal="pressed" from="Sprite2D/VBoxContainer/bottom/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
